--- a/app/assets/stylesheets/pages/_show.scss
+++ b/app/assets/stylesheets/pages/_show.scss
@@ -15,6 +15,17 @@
     text-rendering: auto;
     line-height: 1;
 }
+
+.activities-button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 150px;
+  .fa.fa-arrow-left {
+    top: 0px;
+    margin-right: 10px;
+  }
+}
  h1 {
    margin-bottom: 20px;
    text-align: left;
